--- a/frontend/static/assets/prod/index.html
+++ b/frontend/static/assets/prod/index.html
@@ -1,5 +1,6 @@
 {% extends 'recipes/base.html' %}
 {% load static %}
+{#{% load render_bundle from webpack_loader %}#}
 
 {% block body %}
     <div id="errors" style="
@@ -17,4 +18,7 @@
     {% else %}
         <script src="{% static "assets/build/main.js" %}"></script>
     {% endif %}
+
+{#    {% render_bundle 'main' %}#}
 {% endblock body %}
+<script type="text/javascript" src="main.js"></script>
